--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build && rm -rf out/next && mv out/_next out/next && cp -r extension/* out/",
     "start": "next start",
     "lint": "next lint"
   },
