--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,5 @@ pydantic-settings==2.1.0
 openai==1.12.0
 pytest==8.0.2
 httpx==0.27.0
-python-multipart==0.0.9 
+python-multipart==0.0.9
+prometheus-fastapi-instrumentator==6.0.0 
